# Oj-problem-import

./: .env.example  .gitignore  1.txt  3.txt  AI_TEST_DATA_GENERATION.md  BATCH_QUICKSTART.md  BATCH_USAGE.md  BUILD_EXE.md  DIRECTORY_STRUCTURE_UPDATE.md  IMPLEMENTATION_SUMMARY.md  MULTITASK_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE_MULTITASK.md  QUICKSTART.md  QUICK_BUILD.md  README.md  build_exe.bat  build_exe.ps1  main.py  pyproject.toml  test_problem.txt  test_quick.py  view_outputs.py
.github/: BUILD_FIX.md  WORKFLOW_GUIDE.md
.github/workflows/: build-windows-exe.yml  publish.yml
docs/: CLI使用指南.md  CONFIG_MIGRATION_SUMMARY.md  CONFIG_SIMPLIFICATION.md  ENV_CONFIG_UPDATE.md  OUTPUT_PERSISTENCE_SUMMARY.md  PERSISTENT_SANDBOX.md  PERSISTENT_SANDBOX_IMPLEMENTATION.md  PROJECT_STATUS.md  PUBLISH_GUIDE.md  RELEASE_CHECKLIST.md  RELEASE_v0.1.6.md  架构方案.md  配置管理指南.md
examples/: agent_usage.py  basic_usage.py
oj_engine/: README.md  __init__.py  cli.py  config_manager.py  config_wizard.py  file_scanner.py  sandbox.py  state.py  task_models.py  task_scheduler.py  task_worker.py  user_messages.py  workflow.py
oj_engine/agent/: __init__.py  problem_agent.py
oj_engine/config/: __init__.py  settings.py
oj_engine/nodes/: __init__.py  executor.py  generator.py  parser.py  reflector.py  test_data_generator.py
oj_engine/services/: __init__.py  output_manager.py
oj_engine/tools/: __init__.py  sandbox_tools.py
outputs/20260510_162947_A + B Problem/: README.md  metadata.json  test_cases.json
outputs/20260510_162947_A + B Problem/codes/: generator.py  solution.py
outputs/20260510_163650_A + B Problem/: README.md  metadata.json
outputs/20260510_163650_A + B Problem/codes/: generator.py
tests/: test_cli.py  test_problem_agent.py  test_sandbox_session.py  test_sandbox_tools.py  test_user_messages.py
