[project]
name = "oj-problem-import"
version = "0.1.0"
description = "AI OJ Content Engine - 智能 OJ 题目生成引擎"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "docker>=7.0.0",
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-classic>=1.0.7",
    "click>=8.0.0",
    "platformdirs>=4.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
oj-engine = "oj_engine.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oj_engine*"]
